Fix: Workaround for no wrapping of buttons in senamic UI: https://github.com/Semantic-Org/Semantic-UI/issues/7069

--- a/css/buttons.semanticui.scss
+++ b/css/buttons.semanticui.scss
@@ -69,6 +69,20 @@ div.dt-buttons {
 
 		@include dtb-processing();
 	}
+
+
+	&.ui.buttons {
+		flex-wrap: wrap;
+	}
+
+	&.ui.basic.buttons .ui.button {
+		border-bottom: 1px solid rgba(34,36,38,.15);
+		margin-bottom: -1px;
+
+		&:hover {
+			background: transparent !important;
+		}
+	}
 }
 
 span.dt-down-arrow {
